--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Generates the snake
-      - uses: Platane/snk@master
+      - uses: Platane/snk@v3.2.0
         id: snake-gif
         with:
           github_user_name: rtenorioh
