--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,13 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "*/12 * * *"
+    - cron: "* */6 * * *"
+
   workflow_dispatch:
-  
+
   push:
     branches:
-      - master
+    - master
 
 jobs:
   generate:
@@ -22,6 +23,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg?palette=github-dark
+
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
